--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,28 @@ version: '3.8'
 services:
 
   # Frontend App
-  frontend-app:
-    build: ./crud-example-frontend/.
-    container_name: frontend-app
-    ports:
-      - "80:80"
-    networks:
-      - my-network
+  #frontend-app:
+  #  build: ./crud-example-frontend/.
+  #  container_name: frontend-app
+  #  ports:
+  #    - "80:80"
+  #  networks:
+  #    - my-network
 
   # Backend App
-  backend-app:
-    build: ./crud-example-backend/.
-    container_name: backend-app
-    ports:
-      - "8080:8080"
-    environment:
-      - DATABASE_URL=jdbc:postgresql://postgresql:5432/crud_example
-      - DATABASE_USERNAME=postgres
-      - DATABASE_PASSWORD=postgres
-    depends_on:
-      - postgresql
-    networks:
-      - my-network
+  #backend-app:
+  #  build: ./crud-example-backend/.
+  #  container_name: backend-app
+  #  ports:
+  #    - "8080:8080"
+  #  environment:
+  #    - DATABASE_URL=jdbc:postgresql://postgresql:5432/crud_example
+  #    - DATABASE_USERNAME=postgres
+  #    - DATABASE_PASSWORD=postgres
+  #  depends_on:
+  #    - postgresql
+  #  networks:
+  #    - my-network
 
   # PostgreSQL
   postgresql:
